# UBB-FMI

An-1/Sem-1/ASC/Laborator/: lab4b - Copy.asm  lab5.asm  lab5_1.asm  lab6_2_ex1.asm  lab6_2_ex2.asm  lab6_2_ex3.asm  lab6_ex4 - Copy.asm  lab7_1.asm  lab7_2.asm  lab7_3.asm  lab7_3_1.asm  lab7_4.asm  lab8.asm  lab8_1.asm  lab8_18.asm  lab8_19.asm  lab8_29.asm  lab8_5.asm  lab8_9.asm  tema2.asm  tema3.asm  tema4.asm  tema_lab10.asm  tema_lab10_b.asm  tema_lab11_modul.asm  temalab4.asm  temalab5.asm
An-1/Sem-2/Algoritmica Grafelor/Laborator/TestGrafuri2/: CMakeLists.txt  main.cpp
An-1/Sem-2/Algoritmica Grafelor/Laborator/Test_grafuri/: CMakeLists.txt  fisier.txt  main.cpp
An-1/Sem-2/OOP/Laborator/lab6_7/: CMakeLists.txt  CosCRUDGUI.h  CosFilme.cpp  CosFilme.h  CosReadOnlyGUI.h  MyList.h  domain.cpp  domain.h  filmTableModel.cpp  filmTableModel.h  filmeModel.cpp  filmeModel.h  gui.cpp  gui.h  main.cpp  observator.h  repo.cpp  repo.h  service.cpp  service.h  teste.cpp  teste.h  ui.cpp  ui.h  undo.h  validator.cpp  validator.h
An-1/Sem-2/OS/: desktop.ini
An-1/Sem-2/SDA/TAD MultiDictionar/: CMakeLists.txt
An-1/Sem-2/SDA/lab1_sda/: App.cpp  TestExtins.cpp
An-1/Sem-2/SDA/lab1sda/: CMakeLists.txt  main.cpp
An-1/Sem-2/SDA/lab3_sda/: CMakeLists.txt  IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h  TestExtins.cpp  TestScurt.cpp  main.cpp
An-1/Sem-2/SDA/lab4_sda/: CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h  TestScurt.cpp  main.cpp
An-1/Sem-2/SDA/lab5_sda/: CMakeLists.txt  Matrice.cpp  Matrice.h  TestExtins.cpp  TestScurt.cpp  main.cpp
An-1/Sem-2/SDA/lab6_sda/: CMakeLists.txt  IteraatorMDO.cpp  IteratorMDO.h  MDO.cpp  MDO.h  TestScurt.cpp  main.cpp
An-1/Sem-2/SDA/lab_sda1/: CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp  main.cpp
An-1/Sem-2/Sisteme Dinamice/: lab1.mw  lab2.mw  lab3.mw  lab4.mw  lab5.mw  lab6.mw
(+91 files in other folders)
